# C_AV_SIL

./: .gitmodules  CMakeLists.txt  sonar-project.properties
.github/workflows/: ci.yml  test.yml
PythonTest/: FeedAndRun.py  FeederServer.py  LogScrapper.py  SIL.sh  Test_AVTrainingData.csv
PythonTest/ERT_Wildhorn_Flight_Data/Team12_PFR_Altitude_SRAD Avionics_Logging_Data_EuRoC2022/avionics_data/: baro_processed.csv  gnss_data.csv  gnss_data_new.csv
PythonTest/ERT_Wildhorn_Flight_Data/Team12_PFR_SRAD_Telemetry_Logging_Data_EuRoC2022/PFR_Telemetry_Logging_Data/: Wildhorn_Telemetry_CLEAN.csv  Wildhorn_Telemetry_RAW.csv
PythonTest/plots/: DataCreation.ipynb  LogScrapper.py  combiner.ipynb
workflows/: ci.yml
